--- a/website/templates/linkedin.html
+++ b/website/templates/linkedin.html
@@ -74,86 +74,257 @@
         </div>
         <div class="page">
             <div class="left-part">
-                <img class="background-photo" src="static/linkedin-images/left-part-images/background-photo.jfif">
-                <img class="profile-photo" src="static/linkedin-images/left-part-images/profile-photo.jfif">
-                <div class="name-and-university">
-                    <div class="name">
-                       Emir Alić
+                <div class="left-part1">
+                    <img class="background-photo" src="static/linkedin-images/left-part-images/background-photo.jfif">
+                    <img class="profile-photo" src="static/linkedin-images/left-part-images/profile-photo.jfif">
+                    <div class="name-and-university">
+                        <div class="name">
+                           Emir Alić
+                        </div>
+                        <div class="university">
+                            <img class="university-photo" src="static/linkedin-images/left-part-images/university-logo.png">
+                            <div class="university-name">
+                                Univerzitet u Tuzli
+                            </div>
+                        </div>
                     </div>
-                    <div class="university">
-                        <img class="university-photo" src="static/linkedin-images/left-part-images/university-logo.png">
-                        <div class="university-name">
-                            Univerzitet u Tuzli
+                    <div class="description">
+                        Final-year Mechanical Engineering student
+                    </div>
+                    <div class="city-adress">
+                        Tuzla, Federation of Bosnia and Herzegovina, Bosnia and Herzegovina
+                    </div>
+                    <div class="contact-info">
+                        Contact info
+                    </div>
+                    <div class="connections">
+                        182 connections
+                    </div>
+                    <div class="three-buttons">
+                        <button class="open-to">
+                           <div class="open-to-text">
+                               Open to
+                           </div>
+                        </button>
+                        <button class="add-profile">
+                            <div class="add-profile-text">
+                                Add profile section
+                            </div>
+                        </button>
+                        <button class="more-button">
+                            <div class="more-text">
+                                More
+                            </div>
+                        </button>
+                    </div>
+                    <div class="open-to-work">
+                        <div class="open-to-work-text">
+                            Open to work
+                        </div>
+                        <div class="roles-text">
+                            Mechanical Engineer and Computer Aided Design Designer roles
+                        </div>
+                        <div class="details-text">
+                            See all details
                         </div>
                     </div>
                 </div>
-                <div class="description">
-                    Final-year Mechanical Engineering student
-                </div>
-                <div class="city-adress">
-                    Tuzla, Federation of Bosnia and Herzegovina, Bosnia and Herzegovina
-                </div>
-                <div class="contact-info">
-                    Contact info
-                </div>
-                <div class="connections">
-                    182 connections
-                </div>
-                <div class="three-buttons">
-                    <button class="open-to">
-                       <div class="open-to-text">
-                           Open to
-                       </div>
-                    </button>
-                    <button class="add-profile">
-                        <div class="add-profile-text">
-                            Add profile section
+                <div class="left-part2">
+                    <div class="analytics-text">
+                        Analytics
+                    </div>
+                    <div class="eye-private">
+                        <img class="eye-icon" src="static/linkedin-images/left-part-images/eye-icon.png">
+                        <div class="private-to-you-text">
+                            Private to you
                         </div>
-                    </button>
-                    <button class="more-button">
-                        <div class="more-text">
-                            More
+                    </div>
+                    <div class="three-analytics">
+                        <img class="profile-views-icon" src="static/linkedin-images/left-part-images/network-icon.png">
+                        <div class="profile-views-tab">
+                            <div class="profile-views">
+                                7 profile views
+                            </div>
+                            <div class="profile-views-description">
+                                Discover who's viewed your profile.
+                            </div>
                         </div>
-                    </button>
+                        <img class="post-impressions-icon" src="static/linkedin-images/left-part-images/post-impressions-icon.png">
+                        <div class="post-impressions-tab">
+                            <div class="post-impressions">
+                                1,944 post impressions
+                            </div>
+                            <div class="post-impressions-description">
+                                Check out who's engaging with your posts.
+                            </div>
+                        </div>
+                        <img class="search-appearances-icon" src="static/linkedin-images/left-part-images/search-appearance-icon.png">
+                        <div class="search-appearances-tab">
+                            <div class="search-appearances">
+                                7 profile views
+                            </div>
+                            <div class="search-appearances-description">
+                                See how often you appear in search results.
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="open-to-work">
-                    <div class="open-to-work-text">
-                        Open to work
+                <div class="left-part3">
+                    <div class="analytics-text">
+                        Resources
                     </div>
-                    <div class="roles-text">
-                        Mechanical Engineer and Computer Aided Design Designer roles
+                    <div class="eye-private">
+                        <img class="eye-icon" src="static/linkedin-images/left-part-images/eye-icon.png">
+                        <div class="private-to-you-text">
+                            Private to you
+                        </div>
                     </div>
-                    <div class="details-text">
-                        See all details
+                    <div class="creator-mode">
+                      <img class="creator-mode-icon" src="static/linkedin-images/left-part-images/creator-mode-icon.png">
+                      <div class="creator-mode-text">
+                          Creator mode
+                      </div>
+                      <div class="creator-mode-off">
+                          <button class="creator-mode-off-button">
+                              <div>Off</div>
+                          </button>
+                          <div class="creator-mode-description">
+                                  Get discovered, showcase content on your profile, and get access to creator tools
+                          </div>
+                      </div>
                     </div>
+                    <div class="my-network">
+                      <img class="my-network-icon" src="static/linkedin-images/left-part-images/network-icon.png">
+                      <div class="my-network-together">
+                        <div class="my-network-text">
+                          My network
+                        </div>
+                        <div class="my-network-description">
+                            See and manage your connections and interests.
+                        </div>
+                      </div>
+                    </div>
+                    <div class="my-network">
+                      <img class="my-network-icon" src="static/linkedin-images/left-part-images/demographic-info-icon.png">
+                      <div class="my-network-together">
+                        <div class="my-network-text">
+                            Personal demographic information
+                        </div>
+                        <div class="my-network-description">
+                            Add or manage your information.
+                        </div>
+                      </div>
+                    </div>
+                    <div class="my-network">
+                      <img class="my-network-icon" src="static/linkedin-images/left-part-images/activity-icon.png">
+                      <div class="my-network-together">
+                        <div class="my-network-text">
+                          Activity
+                        </div>
+                        <div class="my-network-description">
+                            See what you've shared with your network, such as posts, articles, and comments.                        </div>
+                      </div>
+                    </div>
+                    <div class="my-network">
+                      <img class="my-network-icon" src="static/linkedin-images/left-part-images/my-items-icon.png">
+                      <div class="my-network-together">
+                        <div class="my-network-text">
+                          My items
+                        </div>
+                        <div class="my-network-description">
+                            Keep track of your jobs, courses, and articles
+                        </div>
+                      </div>
+                    </div>
+                </div>
+                <div class="left-part4">
+                    <div class="analytics-text">
+                        About
+                    </div>
+                    <div class="about-description">
+                        Final-year Mechanical Engineering student with a strong working ethic and enormous enthusiasm towards automotive industry seeking a graduate role.
+                    </div>
+                </div>
+                <div class="left-part5">
+                    <div class="activity-and-button">
+                        <div class="analytics-text">
+                            Activity
+                        </div>
+                        <button class="start-a-post-button">
+                            <div class="start-a-post-text">Start a post</div>
+                        </button>
+                    </div>
+                    <div class="connections1">
+                        182 followers
+                    </div>
+                    <div class="below-activity-title">
+                        You haven't posted lately
+                    </div>
+                    <div class="activity-description">
+                        Recent posts you share or comment on will be displayed here
+                    </div>
+                    <div class="line-between1">
+                    </div>
+                    <div class="show-all-activity-text">
+                        Show all activity 	&#129046;
+                    </div>
+
+
+
+
                 </div>
             </div>
+
+
             <div class="right-part">
-                <div class="text-and-question">
-                    <div class="edit-public-profile-text">
-                    Edit public profile & URL
-                    </div>
-                    <button class="question-mark">
-                        <div class="question-mark-text">
-                            ?
+                <div class="right-part1">
+                    <div class="text-and-question">
+                        <div class="edit-public-profile-text">
+                        Edit public profile & URL
                         </div>
-                    </button>
-                </div>
-                <div class="line-between">
-                </div>
-                <div class="text-and-question">
-                    <div class="add-profile-in-another-language-text">
-                    Add profile in another language
+                        <button class="question-mark">
+                            <div class="question-mark-text">
+                                ?
+                            </div>
+                        </button>
                     </div>
-                    <button class="question-mark1">
-                        <div class="question-mark-text1">
-                            ?
+                    <div class="line-between">
+                    </div>
+                    <div class="text-and-question">
+                        <div class="add-profile-in-another-language-text">
+                        Add profile in another language
                         </div>
-                    </button>
+                        <button class="question-mark1">
+                            <div class="question-mark-text1">
+                                ?
+                            </div>
+                        </button>
+                    </div>
+                    <div class="right-part2">
+                        <div class="ad">
+                            Ad
+                        </div>
+                        <div class="linkedin-premium-text">
+                            Emir, unlock your full potential with Linkedin <span>Premium</span>
+                        </div>
+                        <div class="profile-key-photos">
+                            <img class="ad-profile-photo" src="static/linkedin-images/right-part-images/profile-picture.jpg">
+                            <img class="ad-key-photo" src="static/linkedin-images/right-part-images/key-logo.png">
+                        </div>
+                        <div class="profile-views-text">
+                            See who's viewed your profile in the last <span>90 days</span>
+                        </div>
+                        <button class="try-for-free-button">
+                            <div class="try-for-free-text">
+                                Try for free
+                            </div>
+                        </button>
+
+                    </div>
                 </div>
-
-
             </div>
+
+
         </div>
 
 
