--- a/website/static/linkedin-css/linkedin-header.css
+++ b/website/static/linkedin-css/linkedin-header.css
@@ -10,7 +10,7 @@ body{
     width: 100%;
     height: 53px;
     background-color: rgb(238, 243, 248);
-
+    z-index: 1000;
 }
 .linkedin-logo{
     height: 42px;
